# SPI-Emulator

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: SPI.h  SlaveDevice.h  main.cpp
tests/: test_spi.cpp
